請購單複製作業新增

--- a/templates/base.html
+++ b/templates/base.html
@@ -222,6 +222,8 @@
             <div class="publicdropdown-content">
                 <a href="{{ url_for('index') }}">資料下載</a>
                 <a href="{{ url_for('productno') }}">資料維護</a>
+                <a href="{{ url_for('dupli') }}">請購單複製作業</a>
+                <!-- <a href="{{ url_for('mouban') }}">模板建立作業</a> -->
             </div>
         </div>
         
